--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "mocha"
   },
@@ -11,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chai": "^5.2.0",
+    "chai": "^4.5.0",
     "mocha": "^11.6.0",
+    "proxyquire": "^2.1.3",
     "sinon": "^20.0.0"
   },
   "engines": {
