--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.5.0",
     "mocha": "^11.6.0",
     "proxyquire": "^2.1.3",
+    "rewire": "^8.0.0",
     "sinon": "^20.0.0"
   },
   "engines": {
